<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity"
        >

            <Spinner
                    android:id="@+id/main_preset_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_density"
                    android:layout_marginTop="8dp"
            />
            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_guide_start"
                    app:layout_constraintGuide_begin="81dp"
                    android:orientation="vertical"
            />

            <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_guide_end"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="37dp"
            />

            <ImageView
                    android:id="@+id/main_image_preview"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
            />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/main_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_open"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:tint="@color/colorPrimary"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/main_image_preview"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image_density_label"
                    android:id="@+id/main_density_label"
                    app:layout_constraintBottom_toBottomOf="@+id/main_density"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintTop_toTopOf="@+id/main_density"
            />

            <EditText
                    android:id="@+id/main_density"
                    android:layout_width="0dp"
                    android:layout_height="47dp"
                    android:text="100"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/main_height"/>

            <EditText
                    android:id="@+id/main_width"
                    android:layout_width="0dp"
                    android:layout_height="41dp"
                    android:text="100"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    app:layout_constraintTop_toBottomOf="@+id/main_image_preview" android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/textView" android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_label"
                    android:id="@+id/main_width_label"
                    app:layout_constraintTop_toTopOf="@+id/main_width"
                    app:layout_constraintBottom_toBottomOf="@+id/main_width"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_millimeter"
                    android:id="@+id/main_width_unit_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/main_width"
                    app:layout_constraintBottom_toBottomOf="@+id/main_width"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_end"
                    android:layout_marginStart="8dp"
            />

            <EditText
                    android:id="@+id/main_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/main_width"
                    app:layout_constraintBottom_toBottomOf="@+id/main_width"
                    app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x_label"
                    app:layout_constraintTop_toTopOf="@+id/main_width"
                    app:layout_constraintBottom_toBottomOf="@+id/main_width"
                    android:id="@+id/textView"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/main_width"
                    app:layout_constraintEnd_toStartOf="@+id/main_height" android:layout_marginEnd="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_millimeter"
                    android:id="@+id/main_height_unit_label"
                    app:layout_constraintTop_toTopOf="@+id/main_height"
                    app:layout_constraintBottom_toBottomOf="@+id/main_height"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_end"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="power"
                    android:id="@+id/main_power_label"
                    app:layout_constraintTop_toTopOf="@+id/main_power"
                    app:layout_constraintBottom_toBottomOf="@+id/main_power"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="presets"
                    android:id="@+id/main_power_label2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintHorizontal_bias="0.38"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/main_preset_spinner"
                    app:layout_constraintBottom_toBottomOf="@+id/main_preset_spinner"/>

            <EditText
                    android:id="@+id/main_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/main_preset_spinner"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    app:layout_constraintTop_toTopOf="@+id/main_power"
                    app:layout_constraintBottom_toBottomOf="@+id/main_power"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_end"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="speed"
                    app:layout_constraintTop_toTopOf="@+id/main_speed"
                    app:layout_constraintBottom_toBottomOf="@+id/main_speed"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:id="@+id/main_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:hint="0 - 100"
                    app:layout_constraintTop_toBottomOf="@+id/main_power"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    app:layout_constraintTop_toTopOf="@+id/main_speed"
                    app:layout_constraintBottom_toBottomOf="@+id/main_speed"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_end"
                    android:layout_marginStart="8dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency_label"
                    android:id="@+id/main_frequency_label"
                    app:layout_constraintTop_toTopOf="@+id/main_frequency"
                    app:layout_constraintBottom_toBottomOf="@+id/main_frequency"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:id="@+id/main_frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="2000"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_speed"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
            />

            <EditText
                    android:id="@+id/main_ip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="192.168.42.3"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/main_laser_spinner"/>

            <TextView
                    android:text="@string/ip_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_ip_label"
                    app:layout_constraintBottom_toBottomOf="@+id/main_ip"
                    app:layout_constraintTop_toTopOf="@+id/main_ip"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_ip"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.612"/>

            <TextView
                    android:text="@string/laser_cutter_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_laser_label"
                    app:layout_constraintBottom_toBottomOf="@+id/main_laser_spinner"
                    app:layout_constraintTop_toTopOf="@+id/main_laser_spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_ip"
                    android:layout_marginEnd="8dp"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/job_name_label"
                    android:id="@+id/main_job_name_label"
                    app:layout_constraintTop_toTopOf="@+id/main_job_name"
                    app:layout_constraintBottom_toBottomOf="@+id/main_job_name"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_start"
                    app:layout_constraintStart_toStartOf="parent"
            />

            <EditText
                    android:id="@+id/main_job_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/job_name_label"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_ip"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
            />


            <Spinner
                    android:id="@+id/main_laser_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/main_guide_start"
                    app:layout_constraintEnd_toStartOf="@+id/main_guide_end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/main_frequency"
                    android:layout_marginTop="8dp"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/main_sent_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_send"
            android:tint="@android:color/white"
            android:background="@android:drawable/radiobutton_off_background"
    />

    <FrameLayout
            android:id="@+id/main_sent_progress_group"
            android:layout_gravity="bottom|start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:backgroundTint="#A0000000"
            android:visibility="gone"
            tools:visibility="gone"
    >
        <ProgressBar
                android:id="@+id/main_sent_progress_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_gravity="bottom|start"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:progressTint="@color/colorAccent"
                android:background="@android:color/transparent"
                android:progressBackgroundTint="@android:color/transparent"
                android:visibility="gone"
                tools:visibility="visible"
                tools:progress="1000"
        />

        <TextView
                android:id="@+id/main_sent_progress_text"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:visibility="gone"
                android:layout_gravity="bottom|start"
                android:gravity="center"
                tools:text="100 %"
                tools:visibility="visible"
        />
    </FrameLayout>
</FrameLayout>
